docs(readme): 同步里程碑 1.6——组装事务块输出/溢写配置/--add-opens/路线与 JMH
Co-Authored-By: Claude <noreply@anthropic.com>